# CosmoQuest

./: .env.example  .gitignore  .replit  IMPLEMENTATION_COMPLETE.md  README.md  RENDER_DEPLOYMENT.md  api_service.py  app.py  config.py  groq_api_manager.py  pyproject.toml  replit.md  requirements.txt  routes.py  run.py  test_api_manager.py  test_integration.py
attached_assets/: Pasted--Project-Title-Questify-Turn-Any-Topic-into-a-Learning-Adventure-Idea-Summary-Questify-is-an-AI-1754570942460_1754570942465.txt
static/css/: style.css
static/js/: app.js  quest.js
templates/: index.html  quest.html
